# robot-simulation

./: CMakeLists.txt  package.xml
launch/: simulation.launch  spawn_PHM.launch
meshes/base/: Sirius_UVM_V3_Simplified.dae
meshes/mecanum/: UV_Simplified_MecanumWheel.dae
models/rail/: ExtendedTubeRail.STL  ExtendedTubeRail.dae  Test Setup_Simp.STL  bigrail_old.dae  rail.dae
worlds/: complex_big_rail.world  complex_rail.world  multiple_rails.world  simple_rail.world
