<?xml version="1.0"?>
<package format="2">
  <name>phoenix1_simulation</name>
  <version>1.3.2</version>
  <description>
    Gazebo simulation package for phoenix robot
  </description>
 <license>AIS Confidential</license>
  <author>Abdullah Mohiuddin</author>
  <maintainer email="a.mohiuddin@ai-systems.ca">Abdullah Mohiuddin</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_trajectory_controller</depend>  
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros_control</depend>
  <depend>rqt</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
